# doc_AI_agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  _analyze_output.py  _debug2.py  _debug_cls.py  _diag.py  _diag2.py  _diag3.py  _verify_fix.py  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  temp_editor.js  test_human_workflow.py
.github/workflows/: ci.yml
.qoder/canvases/: gbt-docx-format-correction.canvas.tsx
.qoder/plans/: 工程化改进方案_333f5fed.md
configs/: llm_config.yaml  logging.yaml  reference.docx  settings.yaml
data/: test_cancel.md
data/templates/: GB_T_14454_13_2008_style.json
docs/: ARCHITECTURE.md  DEV_GUIDE.md  USER_GUIDE.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
knowledge_data/raw_docs/: 7709e76d-821c-4ade-bd10-a49cc015c84d.md  kb_test.md  test_kb_doc.md
migrations/: env.py
migrations/versions/: 08deb19fab7e_add_task_reviews_table.py  3a7f1c2d4e5f_add_users_and_user_id_columns.py  5e132870e319_init.py  820ed49c4fca_add_standard_to_style_templates.py
prompts/: content_edit_prompt.md  content_review_prompt.md  docx_review_prompt.md  intent_parsing_prompt.md  style_chat_prompt.md  style_extraction_prompt.md  system_prompt.md
scripts/: generate_reference_docx.py  generate_test_data.py  init_knowledge_base.py  register_template.py  run_pipeline.py  run_server.py  run_worker.py
src/: __init__.py  config.py  llm_client.py
src/api/: __init__.py  main.py  models.py
src/db/: __init__.py  crud.py  database.py  models.py  session.py
src/models/: __init__.py  document_schema.py  style_config.py
src/rag/: __init__.py  chunking_strategy.py  document_loader.py  embedding_factory.py  hybrid_retriever.py  knowledge_base_config.py
src/tasks/: __init__.py  celery_app.py  pipeline_task.py
src/tools/: __init__.py  content_normalizer.py  content_pattern_matcher.py  docx_normalizer.py  docx_review_marker.py  docx_style_extractor.py  docx_styler.py  docx_text_extractor.py  gbt_docx_formatter.py  html_table_preserver.py  html_to_pipe.py  markdown_cleaner.py  (+3 more)
tests/: conftest.py  e2e_test.py  loop_test_backend.py
(+96 files in other folders)
