[project]
name = "doc-ai-agent"
version = "0.1.0"
description = "企业级国标文档结构化与排版智能体"
readme = "docs/ARCHITECTURE.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "DocAI Team" },
]

dependencies = [
    # LLM & 编排
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langgraph>=0.2",
    # 向量数据库
    "chromadb>=0.5",
    "langchain-chroma>=0.2",
    # 混合检索
    "rank-bm25>=0.2",
    "jieba>=0.42",
    # Embedding
    "dashscope>=1.14",
    # 格式转换
    "pypandoc>=1.11",
    # 文档渲染
    "python-docx>=1.0",
    # PDF 预览 (PyMuPDF)
    "PyMuPDF>=1.23",
    # 数据校验 & 配置
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    # 工具
    "rich>=13.0",
    # HTTP 客户端 (MinerU API)
    "requests>=2.31",
    # Web API
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3",
    "aiofiles>=24.1",
    # 数据库
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    # 任务队列
    "celery>=5.4",
    "redis>=5.0",
    # 密码哈希
    "bcrypt>=4.0",
    # 数据库迁移
    "alembic>=1.13",
]

[project.optional-dependencies]
mineru = [
    "magic-pdf>=0.10",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "httpx>=0.27",
    "pre-commit>=3.7",
]
all = [
    "doc-ai-agent[mineru,dev]",
]

[project.scripts]
doc-ai-agent = "scripts.run_pipeline:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [".qoder", ".git", "__pycache__", "migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"src/tools/docx_styler.py" = ["N806"]
"src/tools/docx_style_extractor.py" = ["N806"]
"migrations/*" = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
